@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-11-07T01:02:33Z",
+  "timestamp" : "2023-11-07T08:17:24Z",
   "count_outdated" : 956,
   "uniques_outdated" : 560,
-  "count" : 995,
-  "uniques" : 580,
+  "count" : 996,
+  "uniques" : 581,
   "clones" : [
     {
       "timestamp": "2023-10-24T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 2, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-10-25T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-11-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
