@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2023-10-24T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-10-25T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-11-06T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-11-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
