@@ -1,3 +1,12 @@
+2023-11-07T08:17:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6781730613 # 1354
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-07
+* notice: last 14d: unq all: 2 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 560 956 / 580 995
+* notice: next accum: outdated-unq outdated-all / unq all: 560 956 / 581 996
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-24 2023-11-07]
+
 2023-11-07T01:02:33Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6778563831 # 1353
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-07
